--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "qs": "^6.5.1",
     "swiper": "^4.2.2",
     "v-distpicker": "^1.0.16",
-    "vee-validate": "^2.0.0-rc.25",
+    "vee-validate": "2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-calendar-component": "^2.5.0"
   },
